--- a/plugin.xml
+++ b/plugin.xml
@@ -1,6 +1,6 @@
 <plugin xmlns="http://apache.org/cordova/ns/plugins/1.0"
-		id="cordova-plugin-file-picker"
-		version="0.0.1">
+				id="cordova-plugin-file-picker"
+				version="0.0.1">
 	<name>Cordova Plugin File Picker</name>
 	<description>A cordova plugin for a file picker</description>
 	<license>Onefile Limited</license>
@@ -16,5 +16,21 @@
 		<js-module src="src/windows/FilePicker.js" name="FilePickerProxy">
 			<merges target="" />
 		</js-module>
+	</platform>
+
+	<platform name="ios">
+		<config-file target="config.xml" parent="/*">
+			<feature name="FilePicker">
+				<param name="ios-package" value="FilePicker" />
+			</feature>
+		</config-file>
+		<header-file src="src/ios/FilePicker.h" />
+		<source-file src="src/ios/FilePicker.m" />
+
+		<framework src="AVFoundation.framework" />
+		<framework src="UIKIT.framework" />
+		<framework src="QuartzCore.framework" />
+		<framework src="CoreGraphics.framework" />
+		<framework src="MobileCoreServices.framework" />
 	</platform>
 </plugin>
